<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5e5e5"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.zygotelabs.locker.MainActivity$PlaceholderFragment" >

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:background="#c61e4e"
        android:layout_height="wrap_content" >
        
    	<TextView
	        android:id="@+id/textViewTopTitle"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="@dimen/activity_horizontal_margin"
			android:textSize="16sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#ffffff"
	        android:text="@string/not_protected" />
    	
    	<TextView
	        android:id="@+id/textViewTopTitleSummary"
	        android:layout_marginTop="10dp"
	        android:paddingBottom="10dp"
			android:textSize="14sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/textViewTopTitle"
	        android:layout_alignLeft="@id/textViewTopTitle"
	        android:textColor="#b5b5b5"
	        android:text="@string/not_protected_summary" />
    	
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/admin_layout"
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#ffffff"
        android:layout_marginTop="5dp"
        android:layout_below="@id/top_layout"
        android:layout_height="wrap_content" >
    	
        <TextView
	        android:id="@+id/textViewAdmin"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="@dimen/activity_horizontal_margin"
			android:textSize="14sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#202020"
	        android:text="@string/admin_summary" />
        
        <CheckBox
	        android:id="@+id/checkBoxAdmin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/activity_horizontal_margin"
	        android:layout_below="@id/textViewAdmin"
	        android:layout_marginTop="10dp"
	        android:paddingBottom="10dp"
	        android:onClick="onCheckboxClicked"
	        android:text="@string/admin_checkbox" />

    	
    </RelativeLayout>

    <SeekBar
        android:id="@+id/seekBarLocker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/admin_layout"
        android:max="50"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/textViewLockerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBarLocker"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="#9a9a9a"
        android:layout_marginTop="15dp"
        android:text="0" />

    <Button
        android:id="@+id/buttonApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewLockerCount"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_centerHorizontal="true"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginTop="25dp"
        android:background="#1e91c6"
        android:text="@string/enable" />

</RelativeLayout>